<resources>
    <!-- Common -->
    <string name="packageName">me.henriquecocito.iddog</string>
    <string name="app_name">IDdog</string>
    <string name="logo_name">THE IDDOG</string>

    <!-- Hints -->
    <string name="hint_email">email</string>

    <!-- Buttons -->
    <string name="button_login">login</string>

    <!-- Error messages -->
    <string name="error_empty_email">You must enter your email.</string>
    <string name="error_unknown">An error occurred.</string>
    <string name="error_not_found">Not found.</string>
    <string name="error_empty_grid_title">No dogs found</string>
    <string name="error_empty_grid_subtitle">Swipe down to try again.</string>
    <string name="error_internet_title">No internet connection</string>
    <string name="error_internet_subtitle">Check your internet connection and swipe down to try again.</string>

    <!-- Menus -->
    <string name="menu_husky">Husky</string>
    <string name="menu_labrador">Labrador</string>
    <string name="menu_hound">Hound</string>
    <string name="menu_pug">Pug</string>
    <string name="hint_item_image">Item image</string>
    <string name="error_unknown_title">Something went wrong</string>
    <string name="error_unknown_subtitle">Swipe down to try again.</string>
    <string name="label_counter">%1$s of %2$s</string>

</resources>
